@@ -26,12 +26,12 @@ sad reason.
 <question><para>What versions of Windows are supported?</para></question>
 <answer>
 
-<para>Cygwin can be expected to run on all modern 32 bit versions of
-Windows  This includes, as of the time of writing this, Windows 2000,
-Windows XP, Windows Server 2003, Windows Vista, Windows Server 2008,
-Windows 7, as well as the WOW64 32 bit environment on released 64 bit
-versions of Windows (XP/2003/Vista/2008/7/2008 R2).
-As far as we know no one is working on a native 64 bit version of Cygwin.
+<para>Cygwin can be expected to run on all modern versions of Windows.
+This includes, as of the time of writing this, Windows XP SP3, Windows
+Server 2003, Windows Vista, Windows Server 2008, Windows 7, Windows
+Server 2012, Windows 8.  The 32 bit version also runs in the WOW64 32 bit
+environment on released 64 bit versions of Windows
+(XP/2003/Vista/2008/7/2008 R2/8/2012).
 Since Cygwin is a community-supported free software project, patches to
 provide support for other versions would be thoughtfully considered.
 Paid support contracts or enhancements are available through Red Hat.  For 
